--- a/css/styles.css
+++ b/css/styles.css
@@ -3,10 +3,47 @@
 }
 
 body {
-    color: #EEEEEE;
-    background-color: #151A1A;
+    color: black;
+    background-color:rgb(242, 243, 255);
+}
+
+.body-text {
+    padding-left: 5%;
+    padding-right: 5%;
 }
 
 .spacer-text {
     color: black
 }
+
+h1 {
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 900;
+    font-size: 3rem;
+    line-height: 1.5;
+}
+
+.logo {
+    font-family: 'Ubuntu', sans-serif;
+    font-weight: 700;
+    font-size: 2rem;
+}
+
+.container-fluid {
+    padding-left: 5%;
+    padding-right: 5%;
+}
+
+.section-bar {
+    background-color: #2C469C;
+    width: 100%;
+    padding: 0;
+    color: whitesmoke;
+
+}
+
+.override-pad {
+    width: 100%;
+    padding: 0;
+}
+
