--- a/css/styles.css
+++ b/css/styles.css
@@ -4,7 +4,7 @@
 
 body {
     color: black;
-    background-color:rgb(242, 243, 255);
+    background-color: rgb(242, 243, 255);
 }
 
 .body-text {
@@ -39,7 +39,6 @@ h1 {
     width: 100%;
     padding: 0;
     color: whitesmoke;
-
 }
 
 .override-pad {
@@ -52,7 +51,7 @@ h1 {
 }
 
 .btn-selected {
-    background-color: lightslategray;
+    background-color: #2C469C;
 }
 
 .btn-selected:hover {
@@ -60,10 +59,39 @@ h1 {
 }
 
 .btn-selected:focus {
-    background-color: lightslategray;
+    background-color: #2C469C;
 }
 
 #title-image {
     transform: rotate(20deg);
 }
 
+.img-fluid {
+    padding-bottom: 75px;
+}
+
+/* Carousel */
+.carousel-caption {
+    color: black;
+    font-size: 1em;
+}
+
+#style-carousel {
+    background-color: rgb(219, 215, 255);
+    margin: 2% 10% 2% 10%;
+    border-radius: 50px;
+    border: #2C469C;
+    border-width: 4px;
+    border-style: solid;
+}
+
+.carousel-control-next-icon {
+    background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='blue' viewBox='0 0 8 8'%3E%3Cpath d='M2.75 0l-1.5 1.5 2.5 2.5-2.5 2.5 1.5 1.5 4-4-4-4z'/%3E%3C/svg%3E");
+}
+
+.carousel-control-prev-icon {
+    background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='blue' viewBox='0 0 8 8'%3E%3Cpath d='M5.25 0l-4 4 4 4 1.5-1.5-2.5-2.5 2.5-2.5-1.5-1.5z'/%3E%3C/svg%3E");
+}
+.carousel-indicators li {
+    background-color: #2C469C;
+}
