--- a/css/styles.css
+++ b/css/styles.css
@@ -65,7 +65,6 @@ h1 {
 #title-image {
     transform: rotate(20deg);
 }
-
 .img-fluid {
     padding-bottom: 75px;
 }
@@ -94,4 +93,9 @@ h1 {
 }
 .carousel-indicators li {
     background-color: #2C469C;
+}
+
+.sm-caption {
+    padding-bottom: 10px;
+    margin-top: -50px;
 }
